# Missile_Trajectory_sim

./: README.md
TD_1/UI_Qt/: data.cpp  draw_carve.py  dynamic.cpp  dynamic.h  linearInterp.cpp  linearInterp.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  missile_trajectory_qt.pro  setconstdata.cpp  setconstdata.h  setconstdata.ui  setinitdata.cpp  setinitdata.h  setinitdata.ui
TD_1/core/: data.cpp  dynamic.cpp  dynamic.h  main.cpp
TD_2/: CMakeLists.txt  RK4.cpp  data.cpp  data.h  data.txt  dynamic.cpp  dynamic.h  gaussRand.cpp  gaussRand.h  linearInterp.cpp  main.cpp
TD_3/: CMakeLists.txt  RK4.h  att_controller.slx  controller.cpp  controller.h  data.cpp  data.h  dynamic.cpp  dynamic.h  guiding.cpp  guiding.h  height_controller.slx  linearInterp.cpp  linearInterp.h  main.cpp  missile_dyn.cpp  missile_dyn.h  overload_controller.slx  programmed_trajectory.cpp  programmed_trajectory.h  roll_controller.slx  target_motion.cpp  target_motion.h
matlab_sim(trajectory of mass point)/guiding/: CeterOfMass_Trajectory.m  FigurePlot.m  control.m  dynamic.m  guiding.m  paramater.m  target_motion.m
matlab_sim(trajectory of mass point)/trajectory of missile(without control)/: Blst_Data.m  Blst_Disp.m  Blst_Dyna.m  Blst_Main.m  Blst_RK4.m
